tests/fixtures/invalid/max_float_bytes.py
# Cannot call max() with Float, Bytes
x = max(1.0, b"hello")
